[tool.poetry]
name = "noc-api"
version = "0.1.0"
description = ""
authors = ["Treysen-Zobell <36913811+Treysen-Zobell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
requests = "^2.31.0"
pydash = "^7.0.7"
xmltodict = "^0.13.0"
uvicorn = "^0.27.0.post1"
fastapi-utils = "^0.2.1"
python-dotenv = "^1.0.1"
black = "^24.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
